[gd_scene load_steps=5 format=3 uid="uid://do235c1ga6pv6"]

[ext_resource type="Script" path="res://scripts/minigame.gd" id="1_82thc"]
[ext_resource type="PackedScene" uid="uid://cul4hldbid0uy" path="res://scenes/minigame_gameplay.tscn" id="2_qhhn5"]
[ext_resource type="PackedScene" uid="uid://dbc82t5m02cor" path="res://scenes/success_message.tscn" id="3_xk7jg"]
[ext_resource type="PackedScene" uid="uid://puo5dopegvae" path="res://scenes/failure_message.tscn" id="4_tfyte"]

[node name="Minigame" type="Node2D"]
script = ExtResource("1_82thc")

[node name="MinigameGameplay" parent="." instance=ExtResource("2_qhhn5")]

[node name="SuccessMessage" parent="." instance=ExtResource("3_xk7jg")]
visible = false

[node name="FailureMessage" parent="." instance=ExtResource("4_tfyte")]
visible = false
